feat: Implement Product Catalog REST API with CRUD, validation, and exception handling