@@ -1,16 +1,22 @@
 package org.products.services;
 
 import jakarta.annotation.PostConstruct;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.apache.coyote.ProtocolException;
+import org.products.Dtos.request.ProductRequestDTO;
+import org.products.Dtos.response.ProductResponseDTO;
 import org.products.entities.Product;
 import org.products.enums.Category;
 import org.products.exceptions.ProductNotFound;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,31 +38,65 @@ public class ProductService {
         productList.add(product5);
     }
 
-    public List<Product> getProducts() {
-        return productList;
+    public ResponseEntity<List<ProductResponseDTO>> getProducts() {
+        List<ProductResponseDTO> responseDTOS = productList.stream().map(Product::toResponseDTO).collect(Collectors.toList());
+        return ResponseEntity.ok(responseDTOS);
     }
 
-    public Product getProductById(UUID productId) throws ProductNotFound {
-        return productList.stream()
+    public ResponseEntity<ProductResponseDTO> getProductById(UUID productId) throws ProductNotFound {
+        Product product = productList.stream()
                 .filter(product1 -> product1.getId().equals(productId))
-                .findFirst()
-                .orElseThrow(() -> new ProductNotFound("Product Not Found of this product ID: " + productId));
+                .findFirst().orElseThrow(() -> new ProductNotFound("Product Not Found of this product ID: " + productId));
+
+        ProductResponseDTO productResponseDTO = product.toResponseDTO();
+
+        return ResponseEntity.ok(productResponseDTO);
+
     }
 
-    public List<Product> getProductByCategory(String category) {
-        return productList.stream().filter(product -> product.getCategory().equalsIgnoreCase(category)).toList();
+    public List<ProductResponseDTO> getProductByCategory(String category) {
+        return productList.stream()
+                .filter(product -> product.getCategory().equalsIgnoreCase(category))
+                .map(Product::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public Product deleteProductById(UUID productId) throws ProductNotFound {
+    public void deleteProductById(UUID productId) throws ProductNotFound {
         if (productId.toString().isEmpty() || productId == null) {
-            new RuntimeException("Product ID is required for deleting");
-            return null;
+            throw new IllegalArgumentException("Product ID is required for deleting");
         }
         Product exisitedProduct = productList.stream().filter(product -> product.getId().equals(productId)).findFirst()
                 .orElseThrow(() -> new ProductNotFound("Product not found with id: " + productId));
 
         productList.remove(exisitedProduct);
+    }
 
-        return exisitedProduct;
+    public ProductResponseDTO addProduct(ProductRequestDTO productRequest) {
+        Product product = Product.builder()
+                .id(UUID.randomUUID())
+                .name(productRequest.getName())
+                .description(productRequest.getDescription())
+                .price(productRequest.getPrice())
+                .category(productRequest.getCategory())
+                .stock(productRequest.getStock())
+                .build();
+
+        productList.add(product);
+        return product.toResponseDTO();
+    }
+
+    public ProductResponseDTO updateProduct(UUID productId, @Valid ProductRequestDTO productRequest) throws ProductNotFound {
+        if (productId == null) {
+            throw new IllegalArgumentException("Product ID cannot be null");
+        }
+        Product existingProduct = productList.stream().filter(product -> product.getId().equals(productId)).findFirst()
+                .orElseThrow(() -> new ProductNotFound("Product not found with id: " + productId));
+        existingProduct.setName(productRequest.getName());
+        existingProduct.setDescription(productRequest.getDescription());
+        existingProduct.setPrice(productRequest.getPrice());
+        existingProduct.setCategory(productRequest.getCategory());
+        existingProduct.setStock(productRequest.getStock());
+
+        return existingProduct.toResponseDTO();
     }
 }
